Tue Oct 12 14:04:41 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (int_chr): a codepoint of Ruby M17N must be 32bit
	  unsigned int; GB18030 uses MSB. Also note that OnigCodePoint
	  is defined as uisigned int.

Tue Oct 12 12:20:54 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vm_dump.c (dump_thread): foolish mistake.

Tue Oct 12 10:39:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_MINGW32): canonicalize only on mingw.

Mon Oct 11 20:20:23 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (HTTP.get): specify ASCII-8BIT as the result
	  encoding of Zlib::GzipReader.
	  http://hibari.2ch.net/test/read.cgi/tech/1281473294/271

Mon Oct 11 17:42:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* error.c (syserr_initialize): use mesg's encoding when locale
	  encoding is US-ASCII. If locale encoding is not US-ASCII,
	  assume err has non ASCII characters. [ruby-dev:42358]

Mon Oct 11 14:03:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* error.c (syserr_initialize): set the encoding of Errno::*#message
	  as locale. [ruby-dev:42358]

Mon Oct 11 06:38:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/stringio/stringio.c (strio_set_encoding):
	  StringIO#set_encoding can get 2nd argument and optional hash
	  for API compatibility to IO. [ruby-dev:42356]

Mon Oct 11 06:11:30 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_set_encoding): use rb_funcall2 when the io is not
	  a T_FILE. [ruby-dev:42356]

Sun Oct 10 18:42:23 2010  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#replace): Apply a bit of optimization.

Sun Oct 10 10:20:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_MINGW32): canonicalize as like mswin version.

Sun Oct 10 05:33:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_signal_buff_size, rb_signal_exec): moved
	  declarations from thread.c.

Sat Oct  9 16:54:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
